# cloudkv

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cf-worker/: .prettierignore  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.jsonc
cf-worker/src/: index.ts
cf-worker/test/: index.spec.ts
cloudkv/: __init__.py  __main__.py  _async_client.py  _shared.py  _sync_client.py  _utils.py  async_client.py  shared.py  sync_client.py
tests/: conftest.py  test_async.py  test_sync.py  test_utils.py
