[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudkv"
version = "0.1.0"
description = "Hosted key/value store based on Cloudflare workers and KV store."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.5"]

[project.scripts]
cloudkv = "cloudkv.__main__:cli"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ruff>=0.11.11",
    "pytest>=8.4.0",
    "pytest-pretty>=1.3.0",
    "pyright>=1.1.398",
]

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["cloudkv/**/*.py"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["cloudkv", "tests"]
venv = ".venv"
